--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "flowbite": "^2.5.2",
-        "preline": "^2.5.1"
+        "preline": "^2.5.1",
+        "sweetalert2": "^11.14.5"
     }
 }
