--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "flowbite": "^2.5.2",
         "preline": "^2.5.1",
-        "sweetalert2": "^11.14.5"
+        "sweetalert2": "^11.6.13",
+        "tw-elements": "^2.0.0"
     }
 }
